# indian-market-data-endpoints

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  new-endpoint.yml
endpoints/: amfi-monthly-aaum.md  amfi-navall.md  amfi-navhistory.md  amfi-ter-api.md  lodr-shareholding.md  niftyindices-tri-api.md  nse-daily-indices.md
examples/: README.md  fetch_all_navs.py  fetch_lodr_filing.py  fetch_nifty_tri.py
wrappers/python/: README.md  pyproject.toml
wrappers/python/indian_markets/: __init__.py  amfi.py  bse.py  nse.py
wrappers/python/tests/: test_header_contracts.py  test_smoke.py
