[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "indian-markets"
version = "0.1.0"
description = "Minimal Python clients for undocumented Indian capital-markets endpoints (AMFI, NSE, BSE)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Satwik Basu" }]
keywords = ["india", "mutual-funds", "amfi", "nse", "bse", "fintech", "api"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=7"]
xls = ["xlrd>=2.0", "openpyxl>=3.1"]
xbrl = ["lxml>=5.0"]

[project.urls]
Homepage = "https://github.com/satwikbasu/indian-market-data-endpoints"
Documentation = "https://github.com/satwikbasu/indian-market-data-endpoints#readme"
Issues = "https://github.com/satwikbasu/indian-market-data-endpoints/issues"

[tool.setuptools.packages.find]
include = ["indian_markets*"]
